--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,12 @@
     <ul>
         <li><a href="/cursos">Listar Cursos</a></li>
         <li><a href="/afiliados">Listar Afiliados</a></li>
+        <li><a href="/professores">Listar Professores</a></li>
+        <li><a href="/boletos">Listar Boletos</a></li>
+        <li><a href="/afiliados/novo">Cadastrar Novo Afiliado</a></li>
+        <li><a href="/cursos/novo">Cadastrar Novo Curso</a></li>
+        <li><a href="/professor/novo"> Cadastrar Novo Professor</a></li>
+
     </ul>
 </body>
 </html>
