--- a/templates/afiliados.html
+++ b/templates/afiliados.html
@@ -1,15 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
-    <title>Afiliados</title>
+  <meta charset="UTF-8">
+  <title>Afiliados</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-    <h2>Lista de Afiliados</h2>
-    <ul>
-    {% for afiliado in afiliados %}
-        <li>{{ afiliado.CPF }} - {{ afiliado.Nome }} - {{ afiliado.Status }}</li>
-    {% endfor %}
-    </ul>
-    <a href="/">Voltar</a>
+<body class="container py-5">
+
+  <h2 class="mb-4">👥 Lista de Afiliados</h2>
+
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th>CPF</th>
+        <th>Nome</th>
+        <th>Status</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for afiliado in afiliados %}
+        <tr>
+          <td>{{ afiliado.CPF }}</td>
+          <td>{{ afiliado.Nome }}</td>
+          <td>{{ afiliado.Status }}</td>
+        </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+
+  <a href="/" class="btn btn-secondary">Voltar</a>
+
 </body>
 </html>
