--- a/templates/cursos.html
+++ b/templates/cursos.html
@@ -1,15 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 <head>
-    <title>Lista de Cursos</title>
+  <meta charset="UTF-8">
+  <title>Cursos</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-    <h2>Cursos Disponíveis</h2>
-    <ul>
-    {% for curso in cursos %}
-        <li>{{ curso.ID }} - {{ curso.Nome }} - {{ curso.Area }}</li>
-    {% endfor %}
-    </ul>
-    <a href="/">Voltar</a>
+<body class="container py-5">
+
+  <h2 class="mb-4">📘 Cursos Disponíveis</h2>
+
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>Nome</th>
+        <th>Área</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for curso in cursos %}
+        <tr>
+          <td>{{ curso.ID }}</td>
+          <td>{{ curso.Nome }}</td>
+          <td>{{ curso.Area }}</td>
+        </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+
+  <a href="/" class="btn btn-secondary">Voltar</a>
+
 </body>
 </html>
