--- a/templates/professores.html
+++ b/templates/professores.html
@@ -1,7 +1,34 @@
-<h2>Lista de Professores</h2>
-<ul>
-  {% for professor in professores %}
-    <li>{{ professor.CPF }} - {{ professor.Nome }} - {{ professor.Especializacao }}</li>
-  {% endfor %}
-</ul>
-<a href="/">Voltar</a>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <title>Professores</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body class="container py-5">
+
+  <h2 class="mb-4">👨‍🏫 Lista de Professores</h2>
+
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th>CPF</th>
+        <th>Nome</th>
+        <th>Especialização</th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for professor in professores %}
+        <tr>
+          <td>{{ professor.CPF }}</td>
+          <td>{{ professor.Nome }}</td>
+          <td>{{ professor.Especializacao }}</td>
+        </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+
+  <a href="/" class="btn btn-secondary">Voltar</a>
+
+</body>
+</html>
